--- a/_config.yml
+++ b/_config.yml
@@ -35,13 +35,13 @@ links:
   #   url: /tags
   # - title: about me
   #   url: /about
-# projects in header index
-# projects:
-#   - name: asciilang
-#     url: https://github.com/victorvoid/asciilang
-#   - name: vim-frontend
-#     url: https://github.com/victorvoid/vim-frontend
-#   - name: generator-capybara
-#     url: https://github.com/victorvoid/generator-capybara
+ projects in header index
+ projects:
+   - name: learning-python
+     url: https://github.com/rainofpainki/learning-python
+   - name: nodejs-study
+     url: https://github.com/rainofpainki/nodejs-study
+   - name: laravel-study
+     url: https://github.com/rainofpainki/laravel-study
 # exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
