--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Code Everywhere
 description: "Code Everywhere"
 baseurl: "" # for test: remove string '/space-jekyll-templa' to ''
-url: "http://rainofpainki.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
+url: "https://rainofpainki.github.io" # for test: remove string 'http://victorvoid.github.io' to '' but in production: 'https://yourusername.githu.io'
 # User settings
 username: Sunha Ryu
 user_title: Sunha Ryu - WebDeveloper
@@ -13,7 +13,7 @@ profile_picture: https://avatars3.githubusercontent.com/u/8243179?v=3&s=460
 # Build settings
 markdown: kramdown
 highlighter: rouge
-permalink: /:title/
+permalink: /:title
 
 
 # html minify
